exports[`Default usage`] = `
<div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45
        }
      }>
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10
          }
        }>
        <h1
          style={
            Object {
              "fontSize": 35,
              "margin": "20px 0 0 0",
              "padding": 0
            }
          }>
          Button
        </h1>
        <h2
          style={
            Object {
              "fontSize": 22,
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0
            }
          }>
          Default usage
        </h2>
      </div>
    </div>
  </div>
  <div>
    <div>
      <button
        className="Button-root_1Z5Y8 Button-primary_1gH9y"
        onClick={undefined}>
        Hello!
      </button>
    </div>
  </div>
  <div
    style={undefined}>
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "color": "#444",
          "fontFamily": "
            -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
            \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
          ",
          "fontSize": 15,
          "fontWeight": 300,
          "lineHeight": 1.45
        }
      }>
      <div
        style={
          Object {
            "marginBottom": 0
          }
        }>
        <p
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "
                -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
              ",
              "fontSize": 15
            }
          }>
          This is the default 
          <code>
            Button
          </code>
           usage, just providing a 
          <code>
            label
          </code>
           property.
        </p>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0"
            }
          }>
          Story Source
        </h1>
        <pre
          style={
            Object {
              "backgroundColor": "#fafafa",
              "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
              "fontSize": ".88em",
              "lineHeight": 1.5,
              "overflowX": "scroll",
              "padding": ".5rem"
            }
          }>
          <div
            style={
              Object {
                "paddingLeft": 18,
                "paddingRight": 3
              }
            }>
            <span
              style={
                Object {
                  "color": "#777"
                }
              }>
              <
              Button
            </span>
            <span>
              <span>
                 
                <span
                  style={Object {}}>
                  label
                </span>
                <span>
                  =
                  <span
                    style={Object {}}>
                    <span
                      style={
                        Object {
                          "color": "#22a",
                          "wordBreak": "break-word"
                        }
                      }>
                      \"
                      Hello!
                      \"
                    </span>
                  </span>
                </span>
                 
              </span>
            </span>
            <span
              style={
                Object {
                  "color": "#777"
                }
              }>
              />
            </span>
          </div>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": 25,
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0"
            }
          }>
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0"
              }
            }>
            \"
            Button
            \" Component
          </h2>
          <table
            style={
              Object {
                "borderCollapse": "separate",
                "borderSpacing": "10px 5px",
                "marginLeft": -10
              }
            }>
            <thead>
              <tr>
                <th>
                  property
                </th>
                <th>
                  propType
                </th>
                <th>
                  required
                </th>
                <th>
                  default
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  handleClick
                </td>
                <td>
                  func
                </td>
                <td>
                  no
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  label
                </td>
                <td>
                  string
                </td>
                <td>
                  yes
                </td>
                <td>
                  -
                </td>
              </tr>
              <tr>
                <td>
                  theme
                </td>
                <td>
                  string
                </td>
                <td>
                  no
                </td>
                <td>
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word"
                      }
                    }>
                    \"
                    primary
                    \"
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`handleClick property`] = `
<button
  className="Button-root_1Z5Y8 Button-primary_1gH9y"
  onClick={[Function anonymous]}>
  Click me!
</button>
`;

exports[`label property`] = `
<button
  className="Button-root_1Z5Y8 Button-primary_1gH9y"
  onClick={undefined}>
  Hello
</button>
`;

exports[`type property`] = `
<button
  className="Button-root_1Z5Y8 Button-primary_1gH9y"
  onClick={undefined}>
  Hello
</button>
`;
